# nyc-taxi-heatmaps

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
scripts/: download_data.py  visualize_pickups.py
